--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python-dotenv = "^0.20.0"
 Pillow = "^9.2.0"
 urllib3 = "^1.26.12"
 schedule = "^1.1.0"
+redis = "^4.3.4"
 
 [tool.poetry.dev-dependencies]
 
