--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
+async-timeout==4.0.2; python_version >= "3.6"
 certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
 charset-normalizer==2.1.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
+deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 idna==3.3; python_version >= "3.7" and python_version < "4"
+importlib-metadata==4.12.0; python_version < "3.8" and python_version >= "3.7"
+packaging==21.3; python_version >= "3.6"
 pillow==9.2.0; python_version >= "3.7"
+pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
 python-dotenv==0.20.0; python_version >= "3.5"
+redis==4.3.4; python_version >= "3.6"
 requests==2.28.1; python_version >= "3.7" and python_version < "4"
 schedule==1.1.0; python_version >= "3.6"
+typing-extensions==4.3.0; python_version < "3.8" and python_version >= "3.7"
 urllib3==1.26.12; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0" and python_version < "4")
+wrapt==1.14.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+zipp==3.8.1; python_version < "3.8" and python_version >= "3.7"
